# p3_producerAndConsumer

./: CMakeLists.txt  Dockerfile  EXTRACT_AND_RUN.md  FILE_INDEX.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_VSCODE.md  QUICK_START.md  README.md  README_WINDOWS.md  READ_ME_FIRST.txt  START_HERE.md  VSCODE_SETUP.md  WINDOWS_SETUP.md  docker-compose.yml  media_service.proto  setup.bat  setup.sh
include/: consumerServer.h  producerClient.h  producerThread.h  videoMetadata.h  webServer.h
src/: consumerServer.cpp  producerClient.cpp  producerMain.cpp  producerThread.cpp  producerThread_enhanced.cpp  serverMain.cpp  webServer.cpp
video_files/: README.md
